fix: changes made to font size and the background image at inpartner component various sizes updated with that of the title overflow removed

--- a/src/components/pillarcards/pillarcard.css
+++ b/src/components/pillarcards/pillarcard.css
@@ -15,7 +15,7 @@
 
 .pillar-card img {
   margin: 20px auto 0px auto;
-  
+
 }
 
 .pillar-card h3 {
@@ -57,4 +57,8 @@
 .pillar-card-container a {
   color: rgba(255, 115, 21, 1);
   text-decoration: none;
+}
+
+.pillar-card-container ul {
+  font-family: Inter;
 }
